# Hypseus-Singe-Android

./: .gitattributes  .gitignore  README.md  framework.singe  globals.singe  logcat_full.txt  logcat_test.txt  sae.singe
.github/workflows/: android-apk-build-dle-dl2e.yml  android-apk-build.yml  sync-dl2e-upstream.yml  sync-dle-upstream.yml  sync-spaceace-upstream.yml
android-app/: DLe_fixed.txt  TEST_DRAGONS_LAIR.md  gradle.properties  hypinput_runtime.ini  lint_output.txt  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/scripts/: build_deploy_all_apks.ps1  configure_native_android.ps1  push_lair_assets.ps1  sync_dl2e_upstream.ps1  sync_dlclassic_upstream.ps1  sync_dle_upstream.ps1  sync_spaceace_upstream.ps1
android-app/upstream/: spaceace-sync-lock.json
doc/: SingeGameLayout.md  hypinput_gamepad.ini
src/: CMakeLists.txt  hypseus.cpp  hypseus.h
src/android/: hypseus_android_jni.cpp
src/clear_hw_scoreboard/: clear_hw_scoreboard.cpp
src/game/: game.cpp  game.h  singe.cpp  singe.h
src/io/: CMakeLists.txt  cmdline.cpp  cmdline.h  error.cpp  inpout32.h  input.cpp  keycodes.cpp  limits.h  mpo_fileio.h  network.cpp  serialib.cpp  serialib.h
src/ldp-out/: CMakeLists.txt  ldp-vldp-audio.cpp  ldp-vldp.cpp  ldp-vldp.h
src/manymouse/: CMakeLists.txt  android_stubs.c
src/scoreboard/: img_scoreboard.cpp  overlay_scoreboard.cpp  overlay_scoreboard.h  scoreboard_factory.h  usb_scoreboard.cpp
src/sound/: CMakeLists.txt  samples.cpp  sound.cpp  sound.h
src/unit_tests/: test_framework.cpp  test_framework.h  (+2 more)
(+41 files in other folders)
